# systems_biology_circuits_rust

./: .gitignore  README.md
ch0/: Cargo.toml  ch0.ipynb
ch0/src/: main.rs
ch1/: ch1.ipynb  nalgebra.ipynb
ch2/dioxus-notebook/: Cargo.toml  Dioxus.toml  README.md
ch2/dioxus-notebook/assets/: markdown.css  tailwind.css
ch2/dioxus-notebook/assets/styling/: main.css
ch2/dioxus-notebook/src/: main.rs
ch2/dioxus-notebook/src/components/: chart.rs  chart1.rs  chart2.rs  chart3.rs  chart4.rs  mod.rs  navbar.rs
ch2/dioxus-notebook/src/views/: home.rs  mod.rs  regulation.rs  sir.rs
ch3/coffee_tree_with_rust/: Cargo.toml  README.md
ch3/coffee_tree_with_rust/contrib/: plot_model.gp
ch3/coffee_tree_with_rust/src/: main.rs
src/: main.rs
